# Eidolon-System

./: .gitignore  README.md  ROBOT_MODULE.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
config/robots/: default.yaml  eidolon001.yaml  lerobot_so100_dual.yaml
eidolon/: __init__.py
eidolon/cloud/: __init__.py  api_gateway.py  main.py  orchestrator.py  planner.py
eidolon/common/: config.py  security.py
eidolon/dashboard/: __init__.py  web_ui.py
eidolon/datalake/: __init__.py  mlops.py  storage.py
eidolon/grpc/: __init__.py  device_service.py  teleop_service.py
eidolon/monitoring/: __init__.py  metrics.py  security.py
eidolon/operator/: __init__.py  console.py
eidolon/robot/: __init__.py  brain_client.py  config.py  control.py  feetech.py  hardware.py  main.py  perception.py  robot_system.py  safety.py  teleop_interface.py
eidolon/teleop/: __init__.py  signaling.py  webrtc_client.py
monitoring/: prometheus.yml
proto/: device.proto  planner.proto  teleop.proto
scripts/: generate_proto.py  run_robot.py  run_robot_enhanced.py  setup_robot.py  start_system.py  test_lerobot_so100.py
